# Makefile.am -- Top level automake configuration file
#
# Copyright (C) 2013 Omer Kilic <omerkilic@gmail.com> - Erlang Solutions
# Copyright (C) 2013 Jeremy Bennett <jeremy.bennett@embecosm.com> - Embecosm Limited
#
# This file is part of pihwm <http://omerk.github.io/pihwm>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Process this file with automake to produce a Makefile.in for use with
# autoconf.

# Standard place for local macros
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = lib       \
	  demo      \
	  doc
